--- a/style.css
+++ b/style.css
@@ -16,3 +16,9 @@ aside{
 article{
   flex:3;
 }
+.comment_wrapper{
+  width:90%vw;
+  margin:0 auto;
+  heigh:500px;
+  background:rgba(255,228,181,0.3);
+}
