--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ article{
   flex:3;
 }
 .comment_wrapper{
-  width:90%vw;
+  width:80vw;
   margin:0 auto;
   heigh:500px;
   background:rgba(255,228,181,0.3);
